cupt (2.5.0~) UNRELEASED; urgency=low

  * console:
    - 'rdepends':
      - Small speed-up by using more aggressive caching.
  * lib:
    - system/worker:
      - Updating release and index data: use the information about Translation
        files from Release files if provided.
      - Support Translation diffs.
    - download/manager:
      - Avoid using new[]() in processing socket messages.
      - Use std::queue instead of system pipe for the worker's internal
        message queue.
    - config:
      - New option 'cupt::resolver::no-autoremove-if-rdepends-exist'.
        (Closes: #658981)
      - New option 'cupt::resolver::score::removal-of-autoinstalled'.
      - Lowed a bit the default value of the option
        'cupt::resolver::score::removal'.
    - download/progresses/console:
      - Status line: leave the cursor at the end of line so anynchronous
        warning and error messages are printed on the next line, not over the
        status line.
    - cache/package:
      - When throwing away a duplicate version with different hash sums, show
        also left origins in the warning message.
    - system/resolvers/native:
      - Score calculation: for removals of packages which are not manually
        installed, apply also the 'removal-of-autoinstalled' score.
        (Closes: #662027)
      - Fixed the memory leak. It was introduced in 2.0.0~alpha4.
      - Fixed skipping solutions in some cases if some element cannot be
        auto-removed if it is strictly sticked.
    - cache:
      - Constructor: don't parse release files more than once.
      - Constructor: parsing release files: use an alias instead of the full
        path in error messages.
   - Don't include a not exported header from cupt/common.hpp, making a
     development binary package usable again. Fixes a regression since
     2.3.0~rc1.
   - Remove accidentally included 'using std::string' from a global namespace.
     Fixes a regression since 2.3.0~rc1.
  * downloadmethods: